remake lab06 moki